WebCore/platform/mac/PopupMenuMac.mm
@@ -184,4 +184,9 @@ void PopupMenu::updateFromElement()
 {
 }
 
+bool PopupMenu::itemWritingDirectionIsNatural()
+{
+    return true;
+}
+
 }
