WebCore/platform/qt/PopupMenuQt.cpp
@@ -105,6 +105,11 @@ void PopupMenu::updateFromElement()
 {
 }
 
+bool PopupMenu::itemWritingDirectionIsNatural()
+{
+    return false;
+}
+
 }
 
 // vim: ts=4 sw=4 et
