WebCore/platform/win/TemporaryLinkStubs.cpp
@@ -329,6 +329,7 @@ PopupMenu::~PopupMenu() { notImplemented(); }
 void PopupMenu::show(const IntRect&, FrameView*, int index) { notImplemented(); }
 void PopupMenu::hide() { notImplemented(); }
 void PopupMenu::updateFromElement() { notImplemented(); }
+bool PopupMenu::itemWritingDirectionIsNatural() { notImplemented(); return false; }
 
 void RenderThemeWin::systemFont(int propId, FontDescription& fontDescription) const { notImplemented(); }
 
